fixing slider horizontal scrolling

--- a/cardealership/src/App.css
+++ b/cardealership/src/App.css
@@ -97,7 +97,7 @@ margin-right: 1rem;
     width: 11rem;
     }
     .center div {
-      width: 100%;
+      width: 100% !important;
     }
     .center{
       margin: auto;
